codama-macros/tests/codama_attribute/values_nodes/program/too_many_inputs.fail.rs
use codama_macros::codama;

#[codama(default_value = program("system", "token"))]
pub struct Test;

fn main() {}